; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/svg/extr_svg-parse.c_svg_parse_angle.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/svg/extr_svg-parse.c_svg_parse_angle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"deg\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"grad\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"rad\00", align 1
@FZ_RADIAN = common dso_local global float 0.000000e+00, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @svg_parse_angle(i8* %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca float, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call float @fz_strtof(i8* %6, i8** %4)
  store float %7, float* %5, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = icmp eq i8* %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store float 0.000000e+00, float* %2, align 4
  br label %35

12:                                               ; preds = %1
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @strcmp(i8* %13, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %12
  %17 = load float, float* %5, align 4
  store float %17, float* %2, align 4
  br label %35

18:                                               ; preds = %12
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @strcmp(i8* %19, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %18
  %23 = load float, float* %5, align 4
  %24 = fmul float %23, 0x3FECCCCCC0000000
  store float %24, float* %2, align 4
  br label %35

25:                                               ; preds = %18
  %26 = load i8*, i8** %4, align 8
  %27 = call i32 @strcmp(i8* %26, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %33, label %29

29:                                               ; preds = %25
  %30 = load float, float* %5, align 4
  %31 = load float, float* @FZ_RADIAN, align 4
  %32 = fmul float %30, %31
  store float %32, float* %2, align 4
  br label %35

33:                                               ; preds = %25
  %34 = load float, float* %5, align 4
  store float %34, float* %2, align 4
  br label %35

35:                                               ; preds = %33, %29, %22, %16, %11
  %36 = load float, float* %2, align 4
  ret float %36
}

declare dso_local float @fz_strtof(i8*, i8**) #1

declare dso_local i32 @strcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
